# glmmd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/animator/: PmxBoneAnimator.h  VmdData.h
include/engine/: Camera.h  Event.h  ObjectBase.h  OffscreenRenderer.h  PmxModelRenderer.h  Scene.h
include/engine/lighting/: DirectionalLight.h
include/opengl/: FrameBufferObject.h  IndexBufferObject.h  RenderBufferObject.h  Shader.h  Texture2D.h  VertexArrayObject.h  VertexBufferObject.h  common.h
include/pmx/: FileHelper.h  PmxBoneAnimator.h  PmxModel.h  PmxModelRenderer.h  VmdData.h  VmdLoader.h
include/renderer/: PmxModelRenderer.h  Renderer.h
include/utils/: CodeConverter.h  FileHelper.h  GlobalConfig.h  JsonParser.hpp  Logger.h  OsInfo.h
res/: GlobalConfig.json
res/models/: Cylinder.pmx  Plane.pmx  box.pmx
res/models/DIYUSI/: DIYUSI.pmx  DIYUS_首長.pmx  readme.txt  東方カス子HPのガイドライン.txt
res/models/HakureiReimu0.958_Sheep3D/: readme.txt  readme_English.txt  reimu_Sheep3D_0.958.pmx
res/models/HakureiReimu_v1.0/: HakureiReimu.pmx  readme.txt
res/models/alice_alteanative_160907a/: AliceMargatroid.pmx  しえら式アリス_オルタナティブC2_0907a.pmx  必ずお読みください.txt
res/models/alice_alteanative_160907a/オルタナティブ専用手グー手半開き/: オルタナティブ右手グー.vpd  オルタナティブ右手半開き.vpd  オルタナティブ左手グー.vpd  オルタナティブ左手半開き.vpd
res/motions/: box_test.vmd  ochame_kinou_left.vmd  readme.txt  test.vmd
res/motions/sweetmagic/: readme.txt  sweetmagic-right.vmd
res/shaders/: basic_frag.shader  basic_vert.shader  depth_frag.shader  depth_vert.shader  mmd_style_frag.shader  mmd_style_vert.shader  screen_frag.shader
res/shaders/post_effect/: screen_frag_gray.shader  screen_frag_kernel.shader
src/: Application.cpp  CMakeLists.txt  application.cpp  glad.c
src/animator/: PmxBoneAnimator.cpp  VmdData.cpp
src/engine/: Camera.cpp  Event.cpp  ObjectBase.cpp  OffscreenRenderer.cpp  PmxModelRenderer.cpp  Scene.cpp
src/imgui/: CMakeLists.txt
src/opengl/: CMakeLists.txt  FrameBufferObject.cpp  IndexBufferObject.cpp  RenderBufferObject.cpp  Shader.cpp  Texture2D.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/pmx/: PmxBoneAnimator.cpp  PmxModel.cpp  PmxModelRenderer.cpp  VmdData.cpp
src/renderer/: PmxModelRenderer.cpp  Renderer.cpp
src/utils/: CodeConverter.cpp  GlobalConfig.cpp  Logger.cpp
